version 1.0.6 (not yet released)
--------------------------------
* fix drawing of meridians and parallels for very small map regions
  (issue 79).
* add module variable 'latlon_default' that can be used to switch 
  default value of latlon kwarg to True so plotting methods can be 
  passed lats and lons (geographic coordinatsin degrees) instead
  of x,y (projection coordinates).
* have drawcoastlines use line segments instead of coastline polygons, to
  avoid 'thickening' of lines around edges of map.
* added support for cylindrical equal area ('cea') projection.
* add 'arcgisimage' method for displaying background image retrieved from
  an ArcGIS server using the REST API
  (requires using 'epsg' keyword to define projection).
* add 'epsg' keyword for defining projections.
* add 'ellps' keyword (rsphere ignored if ellps given).
* fixed shiftdata method so it shifts mask along with data
  (https://github.com/matplotlib/basemap/pull/68).
* added linestyle keyword to all draw* methods.
* added 'drawcounties' method (https://github.com/matplotlib/basemap/pull/65)
  thanks to Patrick Marsh.
* fix bug that caused plotting to fail when latlon keyword is 
  explicitly set to False (https://github.com/matplotlib/basemap/pull/66).
* add latlon keyword to plot and scatter methods
  (https://github.com/matplotlib/basemap/pull/64).

version 1.0.5 (git tag v1.0.5rel)
---------------------------------
* fix bug triggered when drawlsmask method called more than once.
* fix error in contour method that caused a bogus mask to be applied
  to the data (issue 58).
* fix further corner cases with splitting of parallels that cross
  the dateline (issue 40).
* add latlon keyword to plotting methods.  If latlon=True, x and y
  values are assumed to longitudes and latitudes in degrees.  The
  data and longitudes are shifted to the map projection region (for
  cylindrical and pseudo-cylindrical projections) using the shiftdata